@@ -25,12 +25,16 @@ Changes:
   $.plot.formatDate(...) (suggestion by Matt Manela) and even
   replaced.
 
-- Added "borderColor" option to the grid (patch from Amaury Chamayoau
+- Added "borderColor" option to the grid (patch from Amaury Chamayou
   and patch from Mike R. Williamson).
 
 - Added support for gradient background for the grid, take a look at
   the "setting options" example (based on patch from Amaury Chamayou,
   issue 90).
+
+- Added a "plotunselected" event which is triggered when the selection
+  is removed, see "selection" example (suggestion by Meda Ugo);
+
   
 Bug fixes:
 
